--- a/admin/backend/package.json
+++ b/admin/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "muter": "^0.7.0",
